# quick-start

./: Cargo.toml  app.db  bacon.toml  my_app.db
db/: readme.md
src/: main.rs
src/background/: background.rs  create_db.rs  global_hotkey.rs  mod.rs
src/sqlite/: db.rs
src/view/: mod.rs  view.rs
src/view/components/: form.rs  header.rs  mod.rs
src/view/config/: button.rs  form.rs  index.rs  input.rs  mod.rs  select.rs
src/view/dash/: board.rs  index.rs  mod.rs  search.rs  tab.rs
src/view/list/: index.rs  mod.rs  table.rs  table_toolbar.rs
