[package]
name = "quick-start"
version = "0.1.0"
edition = "2024"


[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit","wayland","x11"]}
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
unicode-segmentation = "1.13.2"
tray-icon = "0.24.0"
global-hotkey = "0.8.0"
adabraka-ui = "0.3.9"
